--- a/RecipeApp/Views/Nibs/Cells/FoodTableViewCell.xib
+++ b/RecipeApp/Views/Nibs/Cells/FoodTableViewCell.xib
@@ -10,15 +10,15 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="92" id="KGk-i7-Jjw" customClass="FoodTableViewCell" customModule="RecipeApp" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="92"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="102" id="KGk-i7-Jjw" customClass="FoodTableViewCell" customModule="RecipeApp" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="102"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="92"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="102"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FKo-om-qnE">
-                        <rect key="frame" x="10" y="0.0" width="300" height="72"/>
+                        <rect key="frame" x="10" y="10" width="300" height="72"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="HbA-zV-66n">
                                 <rect key="frame" x="10" y="10" width="50" height="52"/>
@@ -78,10 +78,10 @@
                     </view>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="bottom" secondItem="FKo-om-qnE" secondAttribute="bottom" id="3HZ-Bu-3aT"/>
-                    <constraint firstAttribute="trailing" secondItem="FKo-om-qnE" secondAttribute="trailing" constant="10" id="fZA-gP-A43"/>
-                    <constraint firstItem="FKo-om-qnE" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="pS4-g0-704"/>
-                    <constraint firstItem="FKo-om-qnE" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="zzU-hz-9Zm"/>
+                    <constraint firstItem="FKo-om-qnE" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="1Pk-uM-OiR"/>
+                    <constraint firstItem="FKo-om-qnE" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="Zv0-5I-2sT"/>
+                    <constraint firstAttribute="bottom" secondItem="FKo-om-qnE" secondAttribute="bottom" constant="10" id="iyA-TM-Qdd"/>
+                    <constraint firstAttribute="trailing" secondItem="FKo-om-qnE" secondAttribute="trailing" constant="10" id="zEM-Ip-E0k"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
@@ -92,7 +92,7 @@
                 <outlet property="cellTitle" destination="JyD-uZ-k30" id="Ud5-bm-ZFb"/>
                 <outlet property="cellView" destination="FKo-om-qnE" id="6Dy-Jm-3v2"/>
             </connections>
-            <point key="canvasLocation" x="-15.267175572519083" y="43.661971830985919"/>
+            <point key="canvasLocation" x="-15.267175572519083" y="37.323943661971832"/>
         </tableViewCell>
     </objects>
     <resources>
