--- a/RecipeApp/Views/Nibs/Views/FoodDetailView.xib
+++ b/RecipeApp/Views/Nibs/Views/FoodDetailView.xib
@@ -14,20 +14,17 @@
             <rect key="frame" x="0.0" y="0.0" width="393" height="375"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="eGk-Op-QYI">
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="eGk-Op-QYI">
                     <rect key="frame" x="0.0" y="0.0" width="393" height="277"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <constraints>
+                        <constraint firstAttribute="width" secondItem="eGk-Op-QYI" secondAttribute="height" multiplier="393:277" id="cYR-qr-sMd"/>
+                    </constraints>
                 </imageView>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0bH-fS-BNa">
-                    <rect key="frame" x="54" y="314" width="42" height="21"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <nil key="textColor"/>
-                    <nil key="highlightedColor"/>
-                </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sWT-eb-nRI">
-                    <rect key="frame" x="280" y="314" width="42" height="21"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0bH-fS-BNa">
+                    <rect key="frame" x="10" y="307" width="293" height="21"/>
+                    <constraints>
+                        <constraint firstAttribute="width" secondItem="0bH-fS-BNa" secondAttribute="height" multiplier="293:21" id="m0q-Yh-ywi"/>
+                    </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
@@ -41,9 +38,25 @@
                         <action selector="favouriteButtonPressed:" destination="iN0-l3-epB" eventType="touchUpInside" id="2mj-CZ-KCt"/>
                     </connections>
                 </button>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sWT-eb-nRI">
+                    <rect key="frame" x="341.66666666666669" y="307" width="41.333333333333314" height="21"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <nil key="textColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
             </subviews>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+            <constraints>
+                <constraint firstItem="0bH-fS-BNa" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="10" id="CP2-AX-4Ij"/>
+                <constraint firstItem="eGk-Op-QYI" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="REV-bJ-QvO"/>
+                <constraint firstItem="sWT-eb-nRI" firstAttribute="top" secondItem="eGk-Op-QYI" secondAttribute="bottom" constant="30" id="XiD-u4-PJ6"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="0bH-fS-BNa" secondAttribute="trailing" constant="90" id="aWk-h3-6Vv"/>
+                <constraint firstItem="eGk-Op-QYI" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="aY6-aM-l26"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="sWT-eb-nRI" secondAttribute="trailing" constant="10" id="gtb-xg-QBW"/>
+                <constraint firstItem="0bH-fS-BNa" firstAttribute="top" secondItem="eGk-Op-QYI" secondAttribute="bottom" constant="30" id="rw3-FO-Jqb"/>
+                <constraint firstItem="eGk-Op-QYI" firstAttribute="trailing" secondItem="vUN-kp-3ea" secondAttribute="trailing" id="rzQ-4D-WgJ"/>
+            </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
                 <outlet property="favouriteButton" destination="tzw-wh-vHi" id="dhM-iP-CsW"/>
